k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: portfolio
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - kimani-portfolio.com
      secretName: portfolio-tls
  rules:
    - host: kimani-portfolio.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: portfolio-backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-frontend
                port:
                  number: 80
